@startuml
title Create Refund Request - Model Class Diagram

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundCorner 0
skinparam dpi 170
skinparam defaultFontName Arial
skinparam classFontName Arial
skinparam classAttributeFontName Consolas
skinparam classAttributeIconSize 0
skinparam classBorderColor #263238
skinparam classBackgroundColor #FAFCFD
skinparam classHeaderBackgroundColor #DCEEF8
skinparam ArrowColor #263238
skinparam ArrowThickness 1.2
skinparam linetype ortho
skinparam nodesep 160
skinparam ranksep 140
hide circle

class Booking <<model>> {
  -id: String {UUID}
  -userId: String
  -reservationId: String {unique}
  -fullName: String
  -email: String
  -status: BookingStatus = PENDING_PAYMENT
  --
  +changeStatus(status: BookingStatus): void
  +isPaid(): Boolean
  +isRefundable(at: DateTime): Boolean
}

class Reservation <<model>> {
  -id: String {UUID}
  -userId: String
  -ticketProductId: String
  -status: ReservationStatus = HELD
  -expiresAt: DateTime
  --
  +isExpired(at: DateTime): Boolean
}

class TicketProduct <<model>> {
  -id: String {UUID}
  -attractionId: String
  -name: String
  -status: TicketStatus = ACTIVE
  --
  +isOnSale(): Boolean
}

class RefundRequest <<model>> {
  -id: String {UUID}
  -bookingId: String
  -requestedById: String
  -reason: String
  -amount: Decimal
  -type: RefundRequestType = CUSTOMER_CANCELLATION
  -status: RefundStatus = PENDING
  --
  {static} +open(bookingId: String, type: RefundRequestType, amount: Decimal): RefundRequest
}

Reservation "1" -- "0..1" Booking : booking
TicketProduct "1" -- "0..*" Reservation : reservations
Booking "1" -- "0..*" RefundRequest : refundRequests

@enduml
